[tool.poetry]
name = "chatbot_llm"
version = "0.1.0"
description = ""
authors = ["Alissa <alissa_bruijn@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
langchain = "^0.0.239"
openai = "^0.27.8"
llama-cpp-python = "^0.1.74"
isort = "^5.12.0"
black = "^23.7.0"
bandit = "^1.7.5"
ruff = "^0.0.278"
yamllint = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
